--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
                     <li class="nav-item" style="padding-right: 16px;"><a class="nav-link" href="softwareproducts.html">Software</a></li>
                     <li class="nav-item" style="padding-right: 16px;"><a class="nav-link" href="webproducts.html">Web</a></li>
                     <li class="nav-item" style="padding-right: 16px;"><a class="nav-link" href="services.html">Business</a></li>
-                    <li class="nav-item" style="padding-right: 16px;"><a class="nav-link active" href="contact.html">Contact Us</a></li>
+                    <li class="nav-item" style="padding-right: 16px;"><a class="nav-link" href="https://cloud.borgcreative.com/my/index.php/apps/forms/HSAbKkNKZPoG42pC" target="_blank">Contact Us</a></li>
                     <li class="nav-item" style="padding-right: 0px;"><a class="nav-link" href="https://cloud.borgcreative.com/" target="_blank">Login<svg xmlns="http://www.w3.org/2000/svg" width="1em" height="1em" viewBox="0 0 24 24" fill="none" style="width: 20px;height: 20px;">
                                 <path d="M16 7C16 9.20914 14.2091 11 12 11C9.79086 11 8 9.20914 8 7C8 4.79086 9.79086 3 12 3C14.2091 3 16 4.79086 16 7Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
                                 <path d="M12 14C8.13401 14 5 17.134 5 21H19C19 17.134 15.866 14 12 14Z" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
